# remarkableweread

./: .gitignore  AGENTS.md  CHANGELOG.md  GITHUB_PUBLISH.md  LICENSE  QUICKSTART.md  Qt6 WebEngine 最小示例（reMarkable Paper Pro Move, aarch64.md  QtWebEngineProcess  README.md  READY_TO_PUBLISH.md
.agent/rules/: coding_standards.md  deployment_env.md  framework.md  project_structure.md
.claude/: settings.local.json
archive/bridge-mvp/: README.md  shm_producer_demo.cpp  shm_proto.h
archive/bridge-mvp/viewer/: CMakeLists.txt  main.cpp  main.cpp.v1.0  main.cpp.v2.0  main.qml
archive/docs-archive/: 202511172052Conversation.md  BREAKTHROUGH_SUMMARY_20251122.md  CRITICAL_FINDING.md  CRITICAL_FIX_20251122_COMPLETE.md  CURRENT_STATUS_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DISPLAY_DIAGNOSIS.md  EINK_INTEGRATION_PLAN.md  (+21 more)
docs/: BRIDGE_TWO_PROCESS_MVP.md  EINK_REFRESH_SOLUTION.md  PROJECT_STATUS_20251123.md  Projects for Running a Browser on reMarkable (WeChat Reading Support).docx  VERSION_3.0.md  VNC_ACCESS_GUIDE.md  appload_postmortem.md  click_page_turn_analysis.md  critical_info.md  how-to-diagnose-dom.md  koreader_display_mechanism.md  lessons_learned.md  menu-diagnosis-report.md  rmpp_display_solutions.md
libs/: libwebpdemux.so.2.0.9
scripts/: build_app.sh  build_webengine.sh  clean_and_configure.sh  fix-qtwebengine-toolchain.sh  quick-deploy.sh  test-simple-refresh.sh  weread-dom-diagnostic.js
src/: CMakeLists.txt
src/app/: catalog_widget.cpp  catalog_widget.h  common.h  eink_refresh.cpp  eink_refresh.h  gesture_filter.cpp  gesture_filter.h  main.cpp  main.cpp.v3.0  resource_interceptor.cpp  resource_interceptor.h  routed_page.cpp  routed_page.h  smart_refresh.cpp  smart_refresh.h  touch_logger.cpp  touch_logger.h  weread_browser.cpp  weread_browser.h  weread_browser_ctor.cpp  weread_browser_init_load.cpp  weread_browser_init_nav.cpp  weread_browser_init_profile.cpp  weread_browser_init_startup.cpp  weread_browser_part1.cpp  weread_browser_part2.cpp  weread_browser_part3.cpp  weread_browser_part4.cpp  weread_browser_part5.cpp  weread_browser_part6.cpp  weread_browser_scripts.cpp
src/diagnostic/: CMakeLists.txt  display_test.cpp
src/koreader/: button-listen  fbdepth  fbink  luajit  sdcv  tar  zsync2
src/koreader/l10n/ur/: koreader.mo
src/koreader/libs/: libarchive.so.13  libcrypto.so.57  libczmq.so.4  libfbink_input.so.1  libfreetype.so.6  libfribidi.so.0  libgif.so.7  libharfbuzz.so.0  libjpeg.so.8  libk2pdfopt.so.2  libleptonica.so.6  libpng16.so.16  libsharpyuv.so.0  libsqlite3.so.0  libssl.so.60  libstdc++.so.6  libturbojpeg.so.0.4.0  libunibreak.so.6  libutf8proc.so.3  libwebp.so.7  libwebpdemux.so.2  libz.so.1  libzmq.so.5  libzstd.so.1
src/koreader/ota/: package.index
(+26 files in other folders)
